# nomad-rs

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md  TODO.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: audit.yaml  ci.yaml
.mise/tasks/: check-all  fix  lint  test
benches/: scheduler_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: validate_job.rs
src/: acl.rs  agent.rs  alloc.rs  allocrunner.rs  api.rs  artifact.rs  cli.rs  client.rs  client_state.rs  config.rs  constraint.rs  deployment.rs  dispatch.rs  drain.rs  driver.rs  error.rs  eval.rs  eval_queue.rs  fingerprint.rs  fsm.rs  id.rs  integration.rs  jobspec.rs  lib.rs  logging.rs  main.rs  membership.rs  metrics.rs  namespace.rs  network.rs  node.rs  otel.rs  periodic.rs  raft.rs  raft_log.rs  reschedule.rs  rpc.rs  scaling.rs  scheduler.rs  server.rs  (+10 more)
tests/: cluster.rs  lifecycle.rs
