[package]
name = "nomad-rs"
version = "0.1.0"
edition = "2024"
description = "Hashicorp Nomad rewrite in Rust under Apache License 2.0"
license = "Apache-2.0"
repository = "https://github.com/WarrDoge/nomad-rs"
keywords = ["nomad", "scheduler", "orchestration", "cluster", "hashicorp"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.85"

[[bin]]
name = "nomad-rs"
path = "src/main.rs"

[lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
nonstandard_style = "deny"
rust_2018_idioms = "deny"
future_incompatible = "deny"
noop_method_call = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
wildcard_imports = "deny"
missing_docs_in_private_items = "deny"
missing_safety_doc = "deny"
must_use_candidate = "deny"
return_self_not_must_use = "deny"
semicolon_if_nothing_returned = "deny"
unnecessary_safety_comment = "deny"
unnecessary_self_imports = "deny"
use_self = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cron = "0.15"
http = "1"
opentelemetry = "0.28"
opentelemetry-otlp = { version = "0.28", features = ["http-proto", "trace"] }
opentelemetry_sdk = "0.28"
regex = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
rustls = "0.23"
rustls-pemfile = "2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "io-util", "signal", "net"] }
tokio-rustls = "0.26"
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "tracing", "propagate-header"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
x509-parser = "0.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scheduler_bench"
harness = false
